<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ubc</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="connect_instructions">List of BLE devices, click on one to connect:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_device_name">Device name:</string>
    <string name="label_state">State:</string>
    <string name="disconnected">Disconnected</string>
    <string name="label_data">Data from BLE device:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="unknown_service">Unknown service</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="ble_arduino">Arduino BLE</string>
    <!-- TODO uncomment and change accordingly -->
    <!--<string name="example">Plugin Example</string> -->
    <string name="ble_garduino">Garduino BLE</string>
    <string name="bc_keyboard">Bluetooth Classic Keyboard</string>
    <string name="bc_gamePad">Bluetooth Classic Gamepad</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="pin_prompt">Choose a pin</string>

    <string-array name="digital_pins">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
    </string-array>

    <string-array name="analog_pins">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="plugins">
        <!-- TODO uncomment and change name accordingly -->
        <!--<item > @string/example</item> -->
        <item> @string/ble_garduino</item>
        <item> @string/bc_gamePad</item>
        <item> @string/ble_arduino</item>
        <item> @string/bc_keyboard</item>
    </string-array>

</resources>
